--- a/src/app/pages/modals/modal-pr/modal-pr.page.html
+++ b/src/app/pages/modals/modal-pr/modal-pr.page.html
@@ -207,6 +207,106 @@
       </div>
     </form>
   </div>
+  <!--CEP PR-->
+  <div [formGroup]="cepForm" *ngIf="isCepPr">
+    <div class="content-flex" fxLayout="column">
+      <!--Column Bloc, Ref_gps, Latitude-->
+      <div class="child-column" fxLayout="row">
+        <div class="child-row">
+          <mat-form-field appearance="outline" floatLabel="auto">
+            <mat-select formControlName="bloc">
+              <mat-option (click)="onSelectNone('bloc-cep')">Aucune</mat-option>
+              <mat-option *ngFor="let bloc of data_bloc" [value]="bloc">
+                {{ bloc.nom }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="child-row">
+          <mat-form-field appearance="outline">
+            <input matInput type="text" placeholder="Ref_gps!" formControlName="ref_gps">
+          </mat-form-field>
+        </div>
+        <div class="child-row">
+          <mat-form-field appearance="outline">
+            <mat-label>Latitude</mat-label>
+            <input matInput type="number" placeholder="Merci de saisissez!" formControlName="latitude">
+          </mat-form-field>
+        </div>
+      </div>
+      <!--column Long, Superficie, Region-->
+      <div class="child-column" fxLayout="row">
+        <div class="child-row">
+          <mat-form-field appearance="outline">
+            <input matInput type="number" placeholder="longitude!" formControlName="longitude">
+          </mat-form-field>
+        </div>
+        <div class="child-row">
+          <mat-form-field appearance="outline">
+            <input matInput type="number" placeholder="superficie!" formControlName="superficie">
+          </mat-form-field>
+        </div>
+        <div class="child-row">
+          <mat-form-field appearance="outline" floatLabel="auto">
+            <mat-select formControlName="region">
+              <mat-option (click)="onSelectRegion()" *ngFor="let reg of data_region" [value]="reg">
+                {{ reg.nom_reg }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <!--column District, Commune, Fokontanu, village-->
+      <div class="child-column" fxLayout="row">
+        <div class="child-row">
+          <mat-form-field appearance="outline" floatLabel="auto">
+            <mat-select formControlName="district">
+              <mat-option (click)="onSelectDistrict()" *ngFor="let dist of data_district_filter" [value]="dist">
+                {{ dist.nom_dist }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="child-row">
+          <mat-form-field appearance="outline" floatLabel="auto">
+            <mat-select formControlName="commune">
+              <mat-option (click)="onSelectCommune()" *ngFor="let com of data_commune_filter" [value]="com">
+                {{ com.nom_com }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="child-row" fxLayout="row">
+          <div class="child-row-flex">
+            <mat-form-field appearance="outline" floatLabel="auto">
+              <mat-select formControlName="fokontany">
+                <mat-option (click)="onSelectFokontany('autres')" *ngIf="data_fokontany_filter.length !== 0">Autres</mat-option>
+                <mat-option (click)="onSelectFokontany('fokontany')" *ngFor="let fkt of data_fokontany_filter" [value]="fkt">
+                  {{ fkt.nom_fkt }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <!--Formulaire Village-->
+          <div class="child-row-flex" *ngIf="isAutresFkt">
+            <mat-form-field appearance="outline">
+              <mat-label>Village</mat-label>
+              <input matInput type="text" placeholder="Merci de saisissez!" formControlName="village">
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+      <!--Bouton-->
+      <div class="child-column" fxLayout="row">
+        <div class="child-row">
+          <button mat-raised-button (click)="onDismiss()" color="danger">Annuller</button>         
+        </div>
+        <div class="child-row">
+          <button mat-raised-button (click)="onSaveCep()" color="primary">Valider</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <!--Animation  Visite Echange-->
   <div *ngIf="isAddAnimeVe || isEditAnimeVe">
     <form [formGroup]="animeVeForm" class="contonair-flex">
@@ -579,7 +679,7 @@
           <mat-label>Categrie associé</mat-label>
           <mat-select formControlName="categorie_ea">
             <mat-option (click)="onSeletCateg('autre')">Autres</mat-option>
-            <mat-option (click)="onSeletCateg('categorie')" *ngFor="let catego of data_categ" [value]="catego">
+            <mat-option (click)="onSeletCateg('categorie')" *ngFor="let catego of data_categ_ea" [value]="catego">
               {{ catego.libelle }}
             </mat-option>
           </mat-select>
